<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_add_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_tab"/>

        <Button
            android:id="@+id/main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_settings"/>

        <CheckBox android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_restore_checkbox"
            android:id="@+id/restore_checkbox"/>

    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>